--- a/towerdefense.qrc
+++ b/towerdefense.qrc
@@ -3,5 +3,7 @@
         <file>map1.txt</file>
         <file>map2.txt</file>
         <file>grass_beta.png</file>
+        <file>path.png</file>
+        <file>basic_button_beta.png</file>
     </qresource>
 </RCC>
