--- a/towerdefense.qrc
+++ b/towerdefense.qrc
@@ -5,5 +5,6 @@
         <file>grass_beta.png</file>
         <file>path.png</file>
         <file>basic_button_beta.png</file>
+        <file>hole.png</file>
     </qresource>
 </RCC>
