--- a/towerdefense.qrc
+++ b/towerdefense.qrc
@@ -6,5 +6,12 @@
         <file>basic_button_beta.png</file>
         <file>hole.png</file>
         <file>map2.txt</file>
+        <file>FireButton.png</file>
+        <file>QuickButton.png</file>
+        <file>WaveButton.png</file>
+        <file>FiringRateButton.png</file>
+        <file>PowerButton.png</file>
+        <file>RangeButton.png</file>
+        <file>SellButton.png</file>
     </qresource>
 </RCC>
